--- a/Contact Page/style.css
+++ b/Contact Page/style.css
@@ -247,12 +247,12 @@ body {
     width: 350px;
 }
 
-.second-form
-p {
+.second-form p {
     margin-top: 15px;
     line-height: 2;
     max-width: 35ch;
 }
+
 .second-form h3 {
     margin-top: 25px;
 }
@@ -267,17 +267,18 @@ p {
     width: 100%;
     /* border: 2px solid red; */
 }
+
 .social-media .social-text {
     font-size: 1.1rem;
     font-weight: 500;
     margin-bottom: 20px;
 }
 
-.footer-social-text{
+.footer-social-text {
     font-size: 12px;
     font-weight: 500;
     word-spacing: 20px;
-   
+
 }
 
 .copyright-social-text {
@@ -300,19 +301,21 @@ input[type="email"] {
     outline: none;
     padding: 15px;
     width: 360px;
-    border: 1px solid rgba(228,224,243,255);
-    background-color: rgb(236,236,236);
-    border-radius:8px;
+    border: 1px solid rgba(228, 224, 243, 255);
+    background-color: rgb(236, 236, 236);
+    border-radius: 8px;
 }
 
 input[type="checkbox"] {
     margin-bottom: 25px;
 }
-.second-form label{
+
+.second-form label {
     font-size: 12px;
     max-width: 46ch;
     display: inline-block;
 }
+
 .footer {
     display: flex;
     justify-content: space-between;
@@ -320,23 +323,23 @@ input[type="checkbox"] {
     flex-wrap: wrap;
 }
 
-.footer> * {
-    
+.footer>* {
+
     margin-right: 30px;
     padding: 15px;
-    
+
 }
 
 .footer h3 {
     line-height: 3.5;
     font-size: 1rem;
-    
+
 }
+
 .footer a {
     font-size: 0.85rem;
     line-height: 2.5;
     letter-spacing: 0.5px;
-    color:rgb(91, 89, 89);
-    transition: border-bottom 0.2s ease-in-out;
+    color: rgb(91, 89, 89);
 }
 
