--- a/Contact Page/style.css
+++ b/Contact Page/style.css
@@ -11,8 +11,6 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    overflow: none;
-
 }
 
 body {
@@ -40,6 +38,7 @@ body {
 .navbar img {
     position: relative;
     right: 300px;
+    max-width: 100%;
 }
 
 .navbar>.left-side {
@@ -142,6 +141,7 @@ body {
 .second {
     width: 100%;
     height: 950px;
+    max-height: 100%;
     background-color: var(--primary-color);
 }
 
@@ -188,7 +188,7 @@ body {
     padding: 10px 0px 10px 20px;
 }
 
-/* End of third Division */
+/* End of third Division *
 
 /* Start of fourth Division */
 
@@ -289,7 +289,6 @@ body {
 .fa-brands {
     font-size: 22px;
     color: var(--primary-color);
-    /* border: 2px solid red; */
     margin-right: 12px;
     margin-bottom: 10px;
     border-radius: 20px;
@@ -360,3 +359,11 @@ input[type="checkbox"] {
     width: 100%;
     left: 0;
 }
+
+.navbar .fa-bars {
+    display: none; /*Hide the icon by default on larger screens */
+    cursor: pointer;
+
+}
+   
+
